<resources>
    <!-- App name -->
    <string name="app_name">StudyLink</string>
    
    <!-- Registration and Log in -->
    <string name="login">Вход</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="are_you_new">Вы здесь впервые?</string>
    <string name="sign_up">Регистрация</string>
    <string name="username">Имя пользователя</string>
    
    <!-- FAB -->
    <string name="home_fab"></string>
    <string name="tasks_fab">Добавить задачу</string>
    <string name="chats_fab"></string>
    <string name="groups_fab">Добавить группу</string>
    <string name="profile_fab">Редактировать профиль</string>

    <!-- Bottom Navigation Bar -->
    <string name="home_bottom_nav">Главная</string>
    <string name="tasks_bottom_nav">Задачи</string>
    <string name="chats_bottom_nav">Чаты</string>
    <string name="groups_bottom_nav">Группы</string>
    <string name="profile_bottom_nav">Профиль</string>
    


    <string name="hello_blank_fragment">Hello blank fragment</string>    
</resources>